--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <p id="quote">"The best way to get started is to quit talking and begin doing."</p>
             <span id="author">- Walt Disney</span>
         </div>
+        <button id="themeSwitch" class="theme-switch">Switch Theme</button>
     </div>
     <script>
         const quotes = [
@@ -25,6 +26,21 @@
         const random = Math.floor(Math.random() * quotes.length);
         document.getElementById('quote').textContent = `"${quotes[random].text}"`;
         document.getElementById('author').textContent = `- ${quotes[random].author}`;
+
+        // Theme switch logic
+        const themeSwitch = document.getElementById('themeSwitch');
+        themeSwitch.addEventListener('click', () => {
+            document.body.classList.toggle('dark-theme');
+            if(document.body.classList.contains('dark-theme')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        });
+        // On load, check for saved theme
+        if(localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-theme');
+        }
     </script>
 </body>
 </html> 
