--- a/admin.html
+++ b/admin.html
@@ -63,7 +63,17 @@
     </style>
 </head>
 <body>
-    <div class="admin-panel">
+    <div id="loginPanel" class="admin-panel">
+        <a href="index.html" class="theme-switch" style="display:block;margin:0 auto 1rem auto;width:max-content;text-align:center;">Home</a>
+        <h2>Admin Login</h2>
+        <form id="loginForm">
+            <input type="password" id="adminPassword" placeholder="Enter admin password" required>
+            <button type="submit">Login</button>
+        </form>
+        <div id="loginError" style="color:#ef4444;display:none;margin-top:0.5rem;">Incorrect password. Try again.</div>
+    </div>
+    <div id="adminPanel" class="admin-panel" style="display:none;">
+        <a href="index.html" class="theme-switch" style="display:block;margin:0 auto 1rem auto;width:max-content;text-align:center;">Home</a>
         <h2>Admin Panel</h2>
         <form id="addQuoteForm">
             <input type="text" id="newQuoteText" placeholder="Quote text" required>
@@ -131,6 +141,32 @@
                 renderQuotesList();
             }
         });
+
+        // Simple authentication
+        const loginPanel = document.getElementById('loginPanel');
+        const adminPanel = document.getElementById('adminPanel');
+        const loginForm = document.getElementById('loginForm');
+        const adminPassword = document.getElementById('adminPassword');
+        const loginError = document.getElementById('loginError');
+        const PASSWORD = 'admin123'; // Change this to your desired password
+
+        loginForm.addEventListener('submit', function(e) {
+            e.preventDefault();
+            if (adminPassword.value === PASSWORD) {
+                loginPanel.style.display = 'none';
+                adminPanel.style.display = 'block';
+                sessionStorage.setItem('admin-auth', 'true');
+            } else {
+                loginError.style.display = 'block';
+                adminPassword.value = '';
+            }
+        });
+
+        // If already authenticated in this session, skip login (optional, for convenience)
+        if (sessionStorage.getItem('admin-auth') === 'true') {
+            loginPanel.style.display = 'none';
+            adminPanel.style.display = 'block';
+        }
     </script>
 </body>
 </html> 
