Update favorite button text in UI
Simplified the favorite button text by removing star symbols, changing '★ Favorited' to 'Favorited' and '☆ Favorite' to 'Favorite'.

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             const btn = document.getElementById('favoriteBtn');
             const quoteObj = getCurrentQuoteObj();
             if (quoteObj && isFavorite(quoteObj)) {
-                btn.textContent = '★ Favorited';
+                btn.textContent = 'Favorited';
             } else {
-                btn.textContent = '☆ Favorite';
+                btn.textContent = 'Favorite';
             }
         }
 
